# svg-project

./: .gitignore  README.md  pyproject.toml
piechart/src/: piechart.py
src/: main.py
src/svg_project/: util.py
